[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# bins_2016
[[bin]]
name = "y2016d01"
path = "src/y2016/d01/main.rs"

[[bin]]
name = "y2016d02"
path = "src/y2016/d02/main.rs"


# bins_2021
[[bin]]
name = "y2021d01"
path = "src/y2021/d01/main.rs"

[[bin]]
name = "y2021d02"
path = "src/y2021/d02/main.rs"

[[bin]]
name = "y2021d03"
path = "src/y2021/d03/main.rs"

[[bin]]
name = "y2021d04"
path = "src/y2021/d04/main.rs"

[[bin]]
name = "y2021d05"
path = "src/y2021/d05/main.rs"

[[bin]]
name = "y2021d06"
path = "src/y2021/d06/main.rs"

[[bin]]
name = "y2021d07"
path = "src/y2021/d07/main.rs"

[[bin]]
name = "y2021d08"
path = "src/y2021/d08/main.rs"

[[bin]]
name = "y2021d09"
path = "src/y2021/d09/main.rs"

[[bin]]
name = "y2021d10"
path = "src/y2021/d10/main.rs"

[[bin]]
name = "y2021d11"
path = "src/y2021/d11/main.rs"

[[bin]]
name = "y2021d12"
path = "src/y2021/d12/main.rs"


# bins_2022
[[bin]]
name = "y2022d01"
path = "src/y2022/d01/main.rs"

[[bin]]
name = "y2022d02"
path = "src/y2022/d02/main.rs"

[[bin]]
name = "y2022d03"
path = "src/y2022/d03/main.rs"

[[bin]]
name = "y2022d04"
path = "src/y2022/d04/main.rs"

[[bin]]
name = "y2022d05"
path = "src/y2022/d05/main.rs"

[[bin]]
name = "y2022d06"
path = "src/y2022/d06/main.rs"


[dependencies]
regex = "1"
substring = "1.4.5"
